[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/move_tool.png" type="Texture" id=1]
[ext_resource path="res://textures/erase_tool.png" type="Texture" id=2]
[ext_resource path="res://textures/active_tool.png" type="Texture" id=3]
[ext_resource path="res://textures/line_tool.png" type="Texture" id=4]
[ext_resource path="res://scenes/Toolbar.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 35 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 50 )

[node name="Toolbar" type="Node2D"]
script = ExtResource( 5 )

[node name="Line" type="Area2D" parent="."]
position = Vector2( 703.616, 54.2548 )

[node name="Sprite" type="Sprite" parent="Line"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Active" type="Sprite" parent="Line"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line"]
visible = false
shape = SubResource( 3 )

[node name="Move" type="Area2D" parent="."]
position = Vector2( 818.908, 54.2548 )

[node name="Sprite" type="Sprite" parent="Move"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Active" type="Sprite" parent="Move"]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Move"]
visible = false
shape = SubResource( 3 )

[node name="Erase" type="Area2D" parent="."]
position = Vector2( 935.895, 54.2548 )

[node name="Sprite" type="Sprite" parent="Erase"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Active" type="Sprite" parent="Erase"]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Erase"]
visible = false
shape = SubResource( 3 )

[node name="ToolbarArea" type="Area2D" parent="."]
position = Vector2( 824.534, 56.112 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToolbarArea"]
shape = SubResource( 4 )
[connection signal="input_event" from="Line" to="." method="_on_Linetool_input_event"]
[connection signal="input_event" from="Move" to="." method="_on_Movetool_input_event"]
[connection signal="input_event" from="Erase" to="." method="_on_Erasetool_input_event"]
[connection signal="mouse_entered" from="ToolbarArea" to="." method="_on_ToolbarArea_mouse_entered"]
